# grin-miner

./: .auto-release.sh  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  grin-miner.toml  install_ocl_plugins.sh
.ci/: install  install.sh  install.yml  release-jobs  release.yml  win.patch  windows-release.yml
.travis/: install.sh
config/: Cargo.toml
config/src/: config.rs  lib.rs  types.rs
cuckoo-miner/: Cargo.toml
cuckoo-miner/src/: build.rs  lib.rs  sanity.rs  types.rs
cuckoo-miner/src/config/: mod.rs  types.rs
cuckoo-miner/src/cuckoo_sys/: ffi.rs  mod.rs  types.rs
cuckoo-miner/src/cuckoo_sys/plugins/: CMakeLists.txt
cuckoo-miner/src/cuckoo_sys/plugins/cmake/: find_cuda.cmake
cuckoo-miner/src/error/: error.rs  mod.rs
cuckoo-miner/src/manager/: manager.rs  mod.rs
cuckoo-miner/src/miner/: consensus.rs  delegator.rs  miner.rs  mod.rs  types.rs  util.rs
cuckoo-miner/tests/: miner.rs  plugins.rs
cuckoo-miner/tests/common/: mod.rs
doc/: build.md
etc/: crate-release.sh
ocl_cuckaroo/: Cargo.toml  perf.data  perf.data.old
ocl_cuckaroo/src/: finder.rs  lib.rs  main.rs  trimmer.rs
ocl_cuckatoo/: Cargo.toml
ocl_cuckatoo/src/: finder.rs  lib.rs  trimmer.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
util/: Cargo.toml
util/src/: hex.rs  lib.rs  logger.rs  types.rs
