[package]
name = "grin-miner"
version = "0.4.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Mining software for Grin, supports CPU and CUDA GPUs."
build = "src/build/build.rs"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-miner"
keywords = [ "crypto", "grin", "mimblewimble", "mining"]
autobins = false

[workspace]
members = ["config", "util", "plugin"]

[[bin]]
name = "grin-miner"
path = "src/bin/grin_miner.rs"

[dependencies]
backtrace = "0.3"
bufstream = "~0.1"
native-tls = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }
term = "0.4"
time = "0.1"
cursive = "0.9.0"

grin_miner_util = { path = "./util", version = "0.4.2" }
grin_miner_plugin = { path = "./plugin", version = "0.4.2" }
grin_miner_config = { path = "./config", version = "0.4.2" }
#cuckoo_miner = { path = "./cuckoo-miner", version = "0.4.2" }
# hack to install ocl plugin automaticaly
ocl_cuckatoo = { path = "./ocl_cuckatoo", version = "0.1.0"}

#use this alternative inclusion below to build cuda plugins
cuckoo_miner = { path = "./cuckoo-miner", features = ["build-cuda-plugins"]}
#or to build avx2 CPU plugins
#cuckoo_miner = { path = "./cuckoo-miner", features = ["build-mean-avx2"]}
#or to build both
#cuckoo_miner = { path = "./cuckoo-miner", features = ["build-cuda-plugins","build-mean-avx2"]}

[build-dependencies]
built = "0.2"
