[package]
name = "grin-miner"
version = "0.5.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Mining software for Grin, supports CPU and CUDA GPUs."
build = "src/build/build.rs"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-miner"
keywords = [ "crypto", "grin", "mimblewimble", "mining"]
autobins = false

[workspace]
members = ["config", "util", "plugin"]

[features]
default = []
opencl = ["ocl_cuckatoo"]

[[bin]]
name = "grin-miner"
path = "src/bin/grin_miner.rs"

[dependencies]
backtrace = "0.3"
bufstream = "~0.1"
native-tls = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }
term = "0.4"
time = "0.1"
cursive = "0.9.0"

grin_miner_util = { path = "./util", version = "0.5.0" }
grin_miner_plugin = { path = "./plugin", version = "0.5.0" }
grin_miner_config = { path = "./config", version = "0.5.0" }
cuckoo_miner = { path = "./cuckoo-miner", version = "0.5.0" }
#use this alternative inclusion below to build cuda plugins
#cuckoo_miner = { path = "./cuckoo-miner", version = "0.5.0", features = ["build-cuda-plugins"]}
ocl_cuckatoo = { path = "./ocl_cuckatoo", version = "0.5.0", optional = true}
ocl_cuckaroo = { path = "./ocl_cuckaroo", version = "0.5.0"}

[build-dependencies]
built = "0.2"
