[package]
name = "grin_miner"
version = "1.0.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Mining software for Grin, supports CPU and CUDA GPUs."
build = "src/build/build.rs"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-miner"
keywords = [ "crypto", "grin", "mimblewimble", "mining"]
autobins = false

[workspace]
members = ["config", "util", "plugin"]

[features]
default = ["tui"]
opencl = ["ocl_cuckatoo", "ocl_cuckaroo"]
tui = ["cursive"]

[[bin]]
name = "grin-miner"
path = "src/bin/grin_miner.rs"

[dependencies]
backtrace = "0.3"
bufstream = "~0.1"
native-tls = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }
term = "0.4"
time = "0.1"

grin_miner_util = { path = "./util", version = "1.0.0" }
grin_miner_plugin = { path = "./plugin", version = "1.0.0" }
grin_miner_config = { path = "./config", version = "1.0.0" }
cuckoo_miner = { path = "./cuckoo-miner", version = "1.0.0" }
#use this alternative inclusion below to build cuda plugins
#cuckoo_miner = { path = "./cuckoo-miner", version = "1.0.0", features = ["build-cuda-plugins"]}
ocl_cuckatoo = { path = "./ocl_cuckatoo", version = "1.0.0", optional = true}
ocl_cuckaroo = { path = "./ocl_cuckaroo", version = "1.0.0", optional = true}

[dependencies.cursive]
version = "0.9.0"
optional = true

[build-dependencies]
built = "0.2"
