[package]
name = "grin_miner_config"
version = "0.4.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
workspace = ".."
publish = false

[dependencies]
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0"

cuckoo_miner = { path = "../cuckoo-miner" }
slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }
grin_miner_util = { path = "../util" }
