[package]
name = "cuckoo_miner"
version = "4.0.0"
authors = ["yeastplume"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Rust bindings to John Tromp's Cuckoo Cycle Implementations"
repository = "https://github.com/mimblewimble/grin-miner"
readme = "../README.md"
build = "src/build.rs"

[features]
default = []
#feature to allow turing off plugin builds
no-plugin-build = []
#whether to test avx2 CPU plugins
test-avx2 = []
#feature which defines whether to build cuda libs
build-cuda-plugins = []

[dependencies]
byteorder = "1"
blake2-rfc = "0.2"
glob = "0.3"
grin_miner_util = { path = "../util", version = "4.0.0" }
grin_miner_plugin = { path = "../plugin", version = "4.0.0" }
libc = "0.2"
libloading = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
rand = "0.3"
regex = "1.3"
rust-crypto = "0.2"
time = "0.1"

[dev-dependencies]
const-cstr = "0.3"

[build-dependencies]
cmake = "0.1"
fs_extra = "1"
