[package]
name = "ocl_cuckaroo"
version = "1.0.2"
workspace = ".."
edition = "2018"

[features]
profile = []


[dependencies]
blake2-rfc = "0.2"
byteorder = "1"
grin_miner_plugin = { path = "../plugin", version = "3.0.0-beta.1" }
libc = "0.2"
hashbrown = "0.7"
ocl = "0.19"

[lib]
name = "ocl_cuckaroo"
crate-type = ["cdylib", "rlib"]
