[package]
name = "grin_miner_plugin"
version = "3.0.0-beta.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
repository = "https://github.com/mimblewimble/grin-miner"
description = "Device specific plugins for the grin miner"
license = "Apache-2.0"
workspace = ".."

[dependencies]
byteorder = "1"
blake2-rfc = "0.2"
libc = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
